Fixed Add Beacon btn Finish edition goes to map Screen names are visible again Edit minigames button has been removed

--- a/authoring-tool/css/poi-preview.css
+++ b/authoring-tool/css/poi-preview.css
@@ -104,7 +104,7 @@
 }
 
 #screens {
-	margin: 30px 0;
+	margin: 30px 0 70px;
 	overflow:auto;
 }
 
